agregado de documentacion y ajustes

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,3 +19,15 @@ spring:
     properties:
       hibernate:
         format_sql: true
+server:
+  port: 8080
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /doc/swagger-ui.html
+
+
+
+
