--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,17 +1,12 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/decrypto_prueba
-    password: 1234
-    username: user
-  sql:
-    init:
-      data-locations:
-      - classpath:carga_sql/archivo-carga.sql
-      mode: always
+    url: jdbc:mysql://monorail.proxy.rlwy.net:27193/railway
+    password: lhYdPISIkcEIuZMhfpBSzlrAwJWNIczw
+    username: root
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
